removed bus and depot images

--- a/googlecharts.html
+++ b/googlecharts.html
@@ -433,9 +433,6 @@
             
         <div class = "data-container">
         <div class="highlights-container">
-            <div class="summary-card" style="--summarybgcolor: rgb(255, 0, 200); --summarytextcolor: white">
-              <img src="TSRTC_LOGO.png" width="60%" height="100%"/>
-          </div>
                   <div class="summary-card">
                     <div id="total_in_service_div">
                       <p id="routes_in_service_title">ROUTES IN SERVICE<br><br>
@@ -448,9 +445,12 @@
                         <span id="total_passengers" class="summary_metric">calculating...</span></p>
                     </div>
                   </div>
-                  <div class="summary-card" style="--summarybgcolor: rgb(124, 30, 93); --summarytextcolor: white">
+                  <div class="summary-card" style="--summarybgcolor: rgb(255, 0, 200); --summarytextcolor: white">
+                      <img src="TSRTC_LOGO.png" width="60%" height="100%"/>
+                  </div>
+                          <!-- <div class="summary-card" style="--summarybgcolor: rgb(124, 30, 93); --summarytextcolor: white">
                       <img class="chart-text" src="TSRTC_bus_depot.jpg" height=100% width=100%/>
-                    </div>
+                    </div> -->
                         <div class="summary-card" style="--summarybgcolor: greenyellow; --summarytextcolor: black">
                     <div id="most_revenue_route_div">
                       <p id="most_revenue_route_title">MOST REVENUE ROUTE<br><br>
